--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
+    "instagram-web-api": "^2.2.2",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
